--- a/.astropod/astropod.config.json
+++ b/.astropod/astropod.config.json
@@ -16,8 +16,7 @@
   "email": "your.email@gmail.com",
   "description": "A short description of your podcast. We suggest creating a podcast description between 600-900 characters or 120-170 words in length.",
   "category": [
-    "Technology",
-    "Business"
+    "Health &amp; Fitness"
   ],
   "feedSize": ""
 }
