Update Settings “follow”

--- a/.astropod/social.config.json
+++ b/.astropod/social.config.json
@@ -1,7 +1,7 @@
 {
   "facebook": "",
   "twitter": "",
-  "youtube": "",
+  "youtube": "https://www.youtube.com/@HowsMyDrinking",
   "instagram": "",
   "github": "",
   "telegram": "",
