--- a/.astropod/astropod.config.json
+++ b/.astropod/astropod.config.json
@@ -2,7 +2,7 @@
   "copyright": "",
   "theme": "light",
   "fundingText": "",
-  "author": "Author's name",
+  "author": "Brought to you by Ria Health",
   "name": "How's My Drinking",
   "banner": "/banner.webp",
   "pageSize": 15,
