--- a/.astropod/astropod.config.json
+++ b/.astropod/astropod.config.json
@@ -14,7 +14,7 @@
   "language": "en",
   "link": "https://your-website-url.netlify.app",
   "email": "your.email@gmail.com",
-  "description": "A short description of your podcast. We suggest creating a podcast description between 600-900 characters or 120-170 words in length.",
+  "description": "How's My Drinking? is an open and honest exploration of alcohol use and its impact on our lives. With each episode, we dive into all things alcohol use disorder (AUD) – from understanding the science to sharing personal insights and real-life experiences. Joined by leading experts in the field, we discuss the realities of AUD, options for quitting or moderating, and tools for living a healthier life, whatever your drinking goals may be. Whether you're interested in changing your habits, supporting a loved one, or simply learning more about alcohol's effects, How's My Drinking? offers real conversations and practical insights.",
   "category": [
     "Health &amp; Fitness"
   ],
