Update Settings “follow”

--- a/.astropod/social.config.json
+++ b/.astropod/social.config.json
@@ -1,5 +1,5 @@
 {
-  "facebook": "",
+  "facebook": "https://www.facebook.com/people/Hows-My-Drinking/61568607241906/",
   "twitter": "",
   "youtube": "https://www.youtube.com/@HowsMyDrinking",
   "instagram": "",
