--- a/.astropod/listenOn.config.json
+++ b/.astropod/listenOn.config.json
@@ -4,7 +4,7 @@
   "deezer": "",
   "applePodcast": "",
   "ivoox": "",
-  "googlePodcast": "",
+  "googlePodcast": "https://www.youtube.com/@HowsMyDrinking",
   "acastPodcasts": "",
   "fountain": "",
   "spotify": "podcasters.spotify.com/pod/show/",
