--- a/.astropod/astropod.config.json
+++ b/.astropod/astropod.config.json
@@ -1,6 +1,6 @@
 {
   "copyright": "",
-  "theme": "dark",
+  "theme": "light",
   "fundingText": "",
   "author": "Brought to you by Ria Health",
   "name": "How's My Drinking",
